--- a/SHS-014-V/DataSources/ApprovalFlow.json
+++ b/SHS-014-V/DataSources/ApprovalFlow.json
@@ -1,8 +1,8 @@
 [
   {
     "ApiId": "/providers/microsoft.powerapps/apis/shared_logicflows",
-    "FlowNameId": "5d7a2a4e-4d5a-4410-929c-b3c7a37fd91e",
-    "Name": "updateinitiativeflow",
+    "FlowNameId": "f0367c7e-bf2a-4c3c-b2fd-6d8bcfe6167f",
+    "Name": "ApprovalFlow",
     "ServiceKind": "ConnectedWadl",
     "Type": "ServiceInfo",
     "WorkflowEntityId": null
