--- a/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
+++ b/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
@@ -739,7 +739,7 @@
                                     Filter(Gallery_study_3.AllItems,Checkbox2_1.Value=true),
                                     Collect(ValueofId,ThisRecord.ID)
                                 );
-                                ApprovalFlow.Run(JSON(ValueofId),Gallery_study_2.Selected.DivisionIdFromList)
+                                ApprovalFlow.Run(JSON(ValueofId),Gallery_study_2.Selected.ID)
                             PressedColor: =Color.White
                             PressedFill: =Self.Fill
                             RadiusBottomLeft: =0
@@ -974,7 +974,7 @@
 
             Gallery_study_3 As gallery.galleryVertical:
                 DelayItemLoading: =true
-                Items: =Filter('Initiative List',DivisionId=Gallery_study_2.Selected.DivisionIdFromList)
+                Items: =Filter('Initiative List',DivisionId=Gallery_study_2.Selected.DivisionIdFromList&&Study=Gallery_study_2.Selected.'Study Name')
                 Layout: =Layout.Vertical
                 LayoutMinHeight: =287
                 LayoutMinWidth: =320
@@ -1874,7 +1874,7 @@
             OnFailure: =
             OnSuccess: |
                 =ResetForm(Form3_1);
-                UpdateContext({CeateInitiative:false})
+                UpdateContext({EditInitiative:false})
             Width: =Parent.Width
             ZIndex: =1
 
