--- a/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
+++ b/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
@@ -1232,7 +1232,8 @@
             OnFailure: =
             OnSuccess: |
                 =ResetForm(Form3);
-                UpdateContext({CeateInitiative:false})
+                UpdateContext({CeateInitiative:false});
+                Refresh('Initiative List')
             Width: =Parent.Width
             ZIndex: =1
 
