--- a/SHS-014-V/DataSources/ApprovalFlowforChampionPage.json
+++ b/SHS-014-V/DataSources/ApprovalFlowforChampionPage.json
@@ -2,7 +2,7 @@
   {
     "ApiId": "/providers/microsoft.powerapps/apis/shared_logicflows",
     "FlowNameId": "f0367c7e-bf2a-4c3c-b2fd-6d8bcfe6167f",
-    "Name": "ApprovalFlow",
+    "Name": "ApprovalFlowforChampionPage",
     "ServiceKind": "ConnectedWadl",
     "Type": "ServiceInfo",
     "WorkflowEntityId": null
