--- a/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
+++ b/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
@@ -749,7 +749,7 @@
                                     Filter(Gallery_study_3.AllItems,Checkbox2_1.Value=true),
                                     Collect(ValueofId,ThisRecord.ID)
                                 );
-                                ApprovalFlow.Run(JSON(ValueofId),Gallery_study_2.Selected.ID)
+                                ApprovalFlowforChampionPage.Run(JSON(ValueofId),Gallery_study_2.Selected.ID)
                             PressedColor: =Color.White
                             PressedFill: =Self.Fill
                             RadiusBottomLeft: =0
