--- a/SHS-014-V/Src/Study.fx.yaml
+++ b/SHS-014-V/Src/Study.fx.yaml
@@ -151,7 +151,7 @@ Study As screen:
                                         }
                                     )
                                 );
-                                Download(Exportflow.Run(JSON(CSVData),"Segment Name").file_link);
+                                Download(Exportflow.Run(JSON(CSVData),"Study").file_link);
                                 Clear(CSVData);
                                 
                             PaddingLeft: =35
