--- a/SHS-014-V/Src/For Approval%28Approver1%29.fx.yaml
+++ b/SHS-014-V/Src/For Approval%28Approver1%29.fx.yaml
@@ -1072,7 +1072,7 @@
                 Items: |-
                     =Filter(
                         'Divisions With Study',
-                        Title = "SendForApproval1",
+                        Title = "approver1",
                         StartsWith(
                             'Study Name',
                             search_study.Text
