--- a/SHS-014-V/Src/EditorState/For Approval%28Approver1%29.editorstate.json
+++ b/SHS-014-V/Src/EditorState/For Approval%28Approver1%29.editorstate.json
@@ -685,7 +685,7 @@
       "MetaDataIDKey": "",
       "Name": "Button&heading_13",
       "OptimizeForDevices": "Off",
-      "ParentIndex": 1,
+      "ParentIndex": 2,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
@@ -2697,7 +2697,7 @@
         {
           "Category": "Behavior",
           "PropertyName": "OnSelect",
-          "RuleProviderType": "Unknown"
+          "RuleProviderType": "User"
         }
       ],
       "StyleName": "defaultButtonStyle",
@@ -3613,7 +3613,7 @@
       "MetaDataIDKey": "",
       "Name": "Container14_14",
       "OptimizeForDevices": "Off",
-      "ParentIndex": 2,
+      "ParentIndex": 1,
       "PersistMetaDataIDKey": false,
       "Properties": [
         {
