--- a/SHS-014-V/CanvasManifest.json
+++ b/SHS-014-V/CanvasManifest.json
@@ -98,7 +98,7 @@
       "zeroalltabindexes": false
     },
     "Author": "",
-    "BindingErrorCount": 24,
+    "BindingErrorCount": 23,
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 500,
     "DocumentAppType": "DesktopOrTablet",
@@ -114,13 +114,13 @@
     "Id": "14bb9c81-1195-47d9-b192-dd6b89f80e8b",
     "InstrumentationKey": "",
     "ManualOfflineProfileId": "",
-    "Name": "SHS-031",
+    "Name": "SHS-014-V",
     "OriginatingVersion": "1.334",
-    "ParserErrorCount": 0,
+    "ParserErrorCount": 2,
     "ShowStatusBar": false
   },
   "PublishInfo": {
-    "AppName": "SHS-031",
+    "AppName": "SHS-014-V",
     "BackgroundColor": "RGBA(0,176,240,1)",
     "IconColor": "RGBA(255,255,255,1)",
     "IconName": "Edit",
