--- a/SHS-014-V/CanvasManifest.json
+++ b/SHS-014-V/CanvasManifest.json
@@ -98,7 +98,7 @@
       "zeroalltabindexes": false
     },
     "Author": "",
-    "BindingErrorCount": 23,
+    "BindingErrorCount": 19,
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 500,
     "DocumentAppType": "DesktopOrTablet",
@@ -120,7 +120,7 @@
     "ShowStatusBar": false
   },
   "PublishInfo": {
-    "AppName": "SHS-031",
+    "AppName": "SHS-014-V",
     "BackgroundColor": "RGBA(0,176,240,1)",
     "IconColor": "RGBA(255,255,255,1)",
     "IconName": "Edit",
