--- a/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
+++ b/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
@@ -102,6 +102,16 @@
                         Y: =20
                         ZIndex: =3
 
+                    Icon27_3 As icon.Reload:
+                        Color: =RGBA(45, 128, 40, 1)
+                        Height: =32
+                        Icon: =Icon.Reload
+                        OnSelect: =Refresh('Divisions With Study')
+                        Width: =36
+                        X: =32
+                        Y: =28
+                        ZIndex: =4
+
                 Container25_35 As groupContainer.manualLayoutContainer:
                     DropShadow: =DropShadow.None
                     FillPortions: =0
