--- a/SHS-014-V/Src/EditorState/For Approval%28Approver1%29.editorstate.json
+++ b/SHS-014-V/Src/EditorState/For Approval%28Approver1%29.editorstate.json
@@ -23345,7 +23345,7 @@
         {
           "AFDDataSourceName": "",
           "AutoRuleBindingEnabled": false,
-          "AutoRuleBindingString": "RGBA(0, 0, 0, 0)",
+          "AutoRuleBindingString": "",
           "InvariantPropertyName": "Fill",
           "IsLockable": false,
           "NameMapSourceSchema": "?"
