--- a/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
+++ b/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
@@ -765,7 +765,9 @@
                             Fill: =RGBA(5, 89, 8, 1)
                             HoverFill: =Self.Fill
                             OnSelect: |-
-                                =Clear(ValueofId);
+                                =UpdateContext({SendforApproval:true});
+                                
+                                Clear(ValueofId);
                                 ForAll(
                                     Filter(Gallery_study_3.AllItems,Checkbox2_1.Value=true),
                                     Collect(ValueofId,ThisRecord.ID)
