--- a/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
+++ b/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
@@ -3229,7 +3229,7 @@
 
         Label37 As label:
             Height: =77
-            Text: ="Text"
+            Text: ="Confirm Submission"
             Width: =412
             X: =4
             Y: =18
