--- a/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
+++ b/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
@@ -3228,7 +3228,9 @@
         ZIndex: =15
 
         Label37 As label:
+            FontWeight: =FontWeight.Bold
             Height: =77
+            Size: =20
             Text: ="Confirm Submission"
             Width: =412
             X: =4
