--- a/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
+++ b/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
@@ -3238,10 +3238,11 @@
             ZIndex: =1
 
         Label38 As label:
-            Height: =75
+            Height: =80
+            Size: =20
             Text: ="Are you sure you want send "&Gallery_study_3.Selected.Study&" for Approval?"
-            Width: =652
-            X: =20
-            Y: =122
+            Width: =779
+            X: =24
+            Y: =124
             ZIndex: =2
 
