--- a/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
+++ b/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
@@ -3240,7 +3240,7 @@
         Label38 As label:
             Height: =80
             Size: =20
-            Text: ="Are you sure you want send "&Gallery_study_3.Selected.Study&" for Approval?"
+            Text: ="Are you sure you want send '"&Gallery_study_3.Selected.Study&"' for Approval?"
             Width: =779
             X: =24
             Y: =124
