--- a/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
+++ b/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
@@ -3221,8 +3221,8 @@
 
     "'Send for Approval_popup' As groupContainer.manualLayoutContainer":
         Fill: =RGBA(166, 215, 153, 1)
-        Height: =437
-        Width: =1031
+        Height: =512
+        Width: =1053
         X: =273
         Y: =176
         ZIndex: =15
@@ -3245,4 +3245,12 @@
             X: =24
             Y: =124
             ZIndex: =2
+
+        TextInput1 As text:
+            Default: =""
+            Height: =217
+            Width: =687
+            X: =96
+            Y: =204
+            ZIndex: =3
 
