--- a/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
+++ b/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
@@ -3256,3 +3256,9 @@
             Y: =204
             ZIndex: =3
 
+        Button5 As button:
+            Text: ="Button"
+            X: =882
+            Y: =480
+            ZIndex: =4
+
