--- a/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
+++ b/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
@@ -764,15 +764,9 @@
                             DisabledFill: =Self.Fill
                             Fill: =RGBA(5, 89, 8, 1)
                             HoverFill: =Self.Fill
-                            OnSelect: |-
+                            OnSelect: |+
                                 =UpdateContext({SendforApproval:true});
                                 
-                                Clear(ValueofId);
-                                ForAll(
-                                    Filter(Gallery_study_3.AllItems,Checkbox2_1.Value=true),
-                                    Collect(ValueofId,ThisRecord.ID)
-                                );
-                                ApprovalFlowforChampionPage.Run(JSON(ValueofId),Gallery_study_2.Selected.ID)
                             PressedColor: =Color.White
                             PressedFill: =Self.Fill
                             RadiusBottomLeft: =0
@@ -3257,8 +3251,18 @@
             ZIndex: =3
 
         Button5 As button:
-            Text: ="Button"
-            X: =882
-            Y: =480
+            Height: =57
+            OnSelect: |-
+                =
+                Clear(ValueofId);
+                ForAll(
+                    Filter(Gallery_study_3.AllItems,Checkbox2_1.Value=true),
+                    Collect(ValueofId,ThisRecord.ID)
+                );
+                ApprovalFlowforChampionPage.Run(JSON(ValueofId),Gallery_study_2.Selected.ID)
+            Text: ="Confirm"
+            Width: =210
+            X: =832
+            Y: =462
             ZIndex: =4
 
