--- a/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
+++ b/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
@@ -3269,14 +3269,8 @@
         Button5_1 As button:
             Height: =57
             OnSelect: |-
-                =
-                Clear(ValueofId);
-                ForAll(
-                    Filter(Gallery_study_3.AllItems,Checkbox2_1.Value=true),
-                    Collect(ValueofId,ThisRecord.ID)
-                );
-                ApprovalFlowforChampionPage.Run(JSON(ValueofId),Gallery_study_2.Selected.ID,Comments.Text)
-            Text: ="Confirm"
+                =UpdateContext({SendforApproval:false})
+            Text: ="Cancel"
             Width: =210
             X: =519
             Y: =462
