--- a/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
+++ b/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
@@ -3269,7 +3269,7 @@
             ZIndex: =5
 
         TextInput3 As text:
-            Default: ="Text input"
+            Default: =""
             Height: =235
             Width: =725
             X: =44
