--- a/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
+++ b/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
@@ -3271,6 +3271,7 @@
         TextInput3 As text:
             Default: =""
             Height: =235
+            HintText: ="Add Comments (Optional)"
             Width: =725
             X: =44
             Y: =181
