--- a/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
+++ b/SHS-014-V/Src/For Champion Action%28C%29.fx.yaml
@@ -3259,6 +3259,7 @@
             ZIndex: =4
 
         Button5_1 As button:
+            Fill: =RGBA(255, 191, 0, 1)
             Height: =57
             OnSelect: |-
                 =UpdateContext({SendforApproval:false})
@@ -3272,6 +3273,7 @@
             Default: =""
             Height: =235
             HintText: ="Add Comments (Optional)"
+            Size: =18
             Width: =725
             X: =44
             Y: =181
