--- a/SHS-014-V/Src/For Admin Action.fx.yaml
+++ b/SHS-014-V/Src/For Admin Action.fx.yaml
@@ -655,12 +655,7 @@
                             Fill: =RGBA(5, 89, 8, 1)
                             HoverFill: =Self.Fill
                             OnSelect: |-
-                                =Clear(ValueofIdS);
-                                ForAll(
-                                    Filter(Gallery_study_4.AllItems,Checkbox2_3.Value=true),
-                                    Collect(ValueofIdS,ThisRecord.ID)
-                                );
-                                ApprovalFlowforAdminAction.Run(JSON(ValueofIdS),"Approval1",Gallery_study_7.Selected.ID)
+                                =UpdateContext({Sendforapprovaladmin:true})
                             PressedColor: =Color.White
                             PressedFill: =Self.Fill
                             RadiusBottomLeft: =0
@@ -1886,6 +1881,7 @@
     "'Send for Approval_popup_1' As groupContainer.manualLayoutContainer":
         Fill: =RGBA(166, 215, 153, 1)
         Height: =557
+        Visible: =false
         Width: =1063
         X: =273
         Y: =176
@@ -1919,7 +1915,7 @@
                     Filter(Gallery_study_3.AllItems,Checkbox2_1.Value=true),
                     Collect(ValueofId,ThisRecord.ID)
                 );
-                ApprovalFlowforChampionPage.Run(JSON(ValueofId),Gallery_study_2.Selected.ID,TextInput3_1.Text);
+                ApprovalFlowforAdminAction.Run(JSON(ValueofId),Gallery_study_2.Selected.ID,TextInput3_1.Text);
                 UpdateContext({SendforApproval:false}); Notify("The study is send for admin review successfully",NotificationType.Success)
             Text: ="Confirm"
             Width: =210
