--- a/SHS-014-V/Src/For Admin Action.fx.yaml
+++ b/SHS-014-V/Src/For Admin Action.fx.yaml
@@ -1881,6 +1881,7 @@
     "'Send for Approval_popup_1' As groupContainer.manualLayoutContainer":
         Fill: =RGBA(166, 215, 153, 1)
         Height: =557
+        Visible: =Sendforapprovaladmin
         Width: =1063
         X: =273
         Y: =176
