--- a/SHS-014-V/Src/For Admin Action.fx.yaml
+++ b/SHS-014-V/Src/For Admin Action.fx.yaml
@@ -685,7 +685,9 @@
                             Fill: =RGBA(255, 0, 0, 1)
                             HoverFill: =Self.Fill
                             OnSelect: |-
-                                =Clear(ValueofIdS);
+                                =UpdateContext({rejectpopup:true});
+                                
+                                Clear(ValueofIdS);
                                 ForAll(
                                     Filter(Gallery_study_4.AllItems,Checkbox2_3.Value=true),
                                     Collect(ValueofIdS,ThisRecord.ID)
