--- a/SHS-014-V/Src/For Admin Action.fx.yaml
+++ b/SHS-014-V/Src/For Admin Action.fx.yaml
@@ -1943,6 +1943,7 @@
     RejectPopup As groupContainer.manualLayoutContainer:
         Fill: =RGBA(166, 215, 153, 1)
         Height: =557
+        Visible: =rejectpopup
         Width: =1063
         X: =293
         Y: =196
