--- a/SHS-014-V/Src/For Admin Action.fx.yaml
+++ b/SHS-014-V/Src/For Admin Action.fx.yaml
@@ -1955,7 +1955,7 @@
         Label38_2 As label:
             Height: =80
             Size: =20
-            Text: ="Are you sure you want to send the initiatives of '"&Gallery_study_3.Selected.Study&"'?"
+            Text: ="Are you sure you want to reject the initiatives of '"&Gallery_study_3.Selected.Study&"'?"
             Width: =869
             X: =44
             Y: =95
@@ -1990,72 +1990,6 @@
             ZIndex: =5
 
         TextInput3_2 As text:
-            Default: =""
-            Height: =235
-            HintText: ="Add Comments (Optional)"
-            Size: =18
-            Width: =725
-            X: =44
-            Y: =181
-            ZIndex: =6
-
-    "'Send for Approval_popup_2' As groupContainer.manualLayoutContainer":
-        Fill: =RGBA(166, 215, 153, 1)
-        Height: =557
-        Visible: =Sendforapprovaladmin
-        Width: =1063
-        X: =303
-        Y: =211
-        ZIndex: =8
-
-        Label37_3 As label:
-            FontWeight: =FontWeight.Bold
-            Height: =77
-            Size: =20
-            Text: ="Confirm Submission"
-            Width: =412
-            X: =4
-            Y: =18
-            ZIndex: =1
-
-        Label38_3 As label:
-            Height: =80
-            Size: =20
-            Text: ="Are you sure you want send '"&Gallery_study_3.Selected.Study&"' for Approval?"
-            Width: =779
-            X: =24
-            Y: =124
-            ZIndex: =2
-
-        Button5_7 As button:
-            Height: =57
-            OnSelect: |-
-                =
-                Clear(ValueofIdS);
-                ForAll(
-                    Filter(Gallery_study_4.AllItems,Checkbox2_3.Value=true),
-                    Collect(ValueofIdS,ThisRecord.ID)
-                );
-                ApprovalFlowforAdminAction.Run(JSON(ValueofIdS),"Approval1",Gallery_study_7.Selected.ID);
-                UpdateContext({Sendforapprovaladmin:false}); Notify("The study is send for approval successfully",NotificationType.Success)
-            Text: ="Confirm"
-            Width: =210
-            X: =832
-            Y: =462
-            ZIndex: =4
-
-        Button5_6 As button:
-            Fill: =RGBA(255, 191, 0, 1)
-            Height: =57
-            OnSelect: |-
-                =UpdateContext({Sendforapprovaladmin:false})
-            Text: ="Cancel"
-            Width: =210
-            X: =519
-            Y: =462
-            ZIndex: =5
-
-        TextInput3_3 As text:
             Default: =""
             Height: =235
             HintText: ="Add Comments (Optional)"
