--- a/SHS-014-V/Src/For Admin Action.fx.yaml
+++ b/SHS-014-V/Src/For Admin Action.fx.yaml
@@ -1222,14 +1222,7 @@
                             Fill: =RGBA(255, 0, 0, 1)
                             HoverFill: =Self.Fill
                             OnSelect: |-
-                                =ClearCollect(
-                                    ValueofIdS,
-                                    Gallery_study_4.Selected.ID
-                                );
-                                ApprovalFlowforAdminAction.Run(
-                                    JSON(ValueofIdS),
-                                    "Rejected",Gallery_study_7.Selected.ID
-                                )
+                                =UpdateContext(({rejectpopup:true})
                             PressedColor: =Color.White
                             PressedFill: =Self.Fill
                             RadiusBottomLeft: =0
