--- a/SHS-014-V/Src/For Admin Action.fx.yaml
+++ b/SHS-014-V/Src/For Admin Action.fx.yaml
@@ -1995,6 +1995,7 @@
     RejectPopup_1 As groupContainer.manualLayoutContainer:
         Fill: =RGBA(152, 208, 70, 1)
         Height: =557
+        Visible: =rejectpopup
         Width: =1063
         X: =303
         Y: =211
