--- a/SHS-014-V/Src/EditorState/For Approval 4.editorstate.json
+++ b/SHS-014-V/Src/EditorState/For Approval 4.editorstate.json
@@ -874,7 +874,7 @@
         {
           "Category": "Data",
           "PropertyName": "LoginNameMenu",
-          "RuleProviderType": "Unknown"
+          "RuleProviderType": "System"
         },
         {
           "Category": "Data",
