--- a/SHS-014-V/Src/EditorState/For Approval%28Approver1%29.editorstate.json
+++ b/SHS-014-V/Src/EditorState/For Approval%28Approver1%29.editorstate.json
@@ -4806,7 +4806,7 @@
         {
           "Category": "Data",
           "PropertyName": "LoginNameMenu",
-          "RuleProviderType": "Unknown"
+          "RuleProviderType": "System"
         },
         {
           "Category": "Data",
